# market-data-server

./: .gitignore  CMakeLists.txt
docs/: protocol.md
include/: MarketDataGenerator.hpp
src/: MarketDataGenerator.cpp  client.cpp  server.cpp
